2013-09-08  Ulrich Müller  <ulm@gentoo.org>

	* keyword-generation.sh (OBSOLETE): Cleanup list.
	(ECLASSES): Strip filename suffix and sort the list of eclasses.

2013-07-07  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode-keywords.el: Add no-update-autoloads to file
	variables.

	* ebuild-mode.el (ebuild-mode-arch-list): Add amd64-fbsd to
	fallback list.

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Work around
	problem with nested interactors in XEmacs. Suppress IUSE if its
	value is empty; the variable is no longer mandatory.

2013-07-06  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.22 released.

2013-07-05  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (interpreter-mode-alist): Don't add runscript.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated
	from eclasses.

	* keyword-generation.sh (OBSOLETE): Clean up list of obsolete
	eclasses.

	* Rename package to ebuild-mode.
	* ebuild-mode.el: File renamed from gentoo-syntax.el.
	(gentoo-syntax): Don't provide feature.
	* ebuild-mode.texi: File renamed from gentoo-syntax.texi.
	* Makefile (PN): Rename to ebuild-mode.
	(PV, DISTFILES): Update.
	(ebuild-mode.info): Rename.

	* gentoo-newsitem-mode.el: New file, split off from
	gentoo-syntax.el.
	* gentoo-syntax.el (gentoo-newsitem-font-lock-keywords)
	(gentoo-newsitem-mode, gentoo-newsitem-insert-skeleton):
	Variable and functions moved to gentoo-newsitem-mode.el.
	* Makefile (DISTFILES): Update.

2013-07-04  Ulrich Müller  <ulm@gentoo.org>

	* gentoo-syntax.el: Remove eselect-mode; it will be maintained
	in the eselect repository.
	(eselect-mode-font-lock-keywords, eselect-mode): Variable and
	function removed.
	* eselect-mode-keywords.el: File removed.
	* gentoo-syntax.texi: Don't mention eselect-mode.
	* Makefile (DISTFILES): Update.

2013-03-08  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.21 released.

	* Makefile (dist): Use xz for compression.
	(clean): Also remove *.xz.
